SCTCD-766 Set text align to left for table headers. Current change fixes issue that they are aligned to center in IE, but must be to left in all browsers.

--- a/gui/src/theming/typography.less
+++ b/gui/src/theming/typography.less
@@ -71,6 +71,7 @@
     border-right-style: none;
     border-bottom: 1px solid @tableBorderColor;
     padding: 10px;
+    text-align: left;
 }
 
 .table-row() {
